--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   
 <head>
+  <link rel="stylesheet" href="estilo.css">
 
   <div style="text-align: center;"> <a href="https://experienciavivo.duoc.cl/alumnos" target="blank">ACCESO A PORTAL DE ALUMNOS</a></div>
   <div style="text-align: center;"> <a href="https://www.instagram.com/" target="blank">INSTAGRAM</a></div>
